Fix source date alignment.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -1082,12 +1082,17 @@ ul.field-collection-view-links {
 
 .pane-profile2-field-source {
   float: left;
+  margin-right: 10px;
 }
 .pane-profile2-field-source-date {
   float: left;
 
-  label, input, .description {
-    float: left;
+  .form-item {
+    display: flex;
+    align-items: center;
+  }
+  label {
+    margin-right: 5px;
   }
 }
 .pane-profile2-field-source-notes {
